--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div>
+      <h1>Hello</h1>
+      <button>Greet</button>
+    </div>
   </body>
 </html>
