--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
   </head>
   <body>
     <div>
       <h1>Hello</h1>
-      <button>Greet</button>
+      <button id="greet">Greet</button>
     </div>
+    <script type="text/javascript" src="greet.js"></script>
   </body>
 </html>
