--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div>
       <h1>Hello</h1>
+      <p>Welcome</p>
       <button id="greet">Greet</button>
     </div>
     <script type="text/javascript" src="greet.js"></script>
