deleted exclamations in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div>
       <h1>Hello</h1>
-      <p>Welcome to underground...!!</p>
+      <p>Welcome to underground...</p>
       <button id="greet">Greet</button>
     </div>
     <script type="text/javascript" src="greet.js"></script>
