STYLE:centerized layout

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <h1>Hello</h1>
-      <p>Welcome to underground...</p>
-      <button id="greet">Greet</button>
+    <div class="container">
+      <div>
+        <h1>Hello</h1>
+        <p>Welcome to underground...</p>
+        <button id="greet">Greet</button>
+      </div>
     </div>
     <script type="text/javascript" src="greet.js"></script>
   </body>
